@@ -12,6 +12,8 @@ octsympy 2.5.0-dev
   * Change (and document!) default matrix norm to the 2-norm (it was
     Frobenius).
 
+  * `isfinite` behaves correctly for variables (and is documented).
+
 
 
 octsympy 2.4.1-dev
